--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,15 @@
  *= require_tree .
  *= require_self
  */
+
+ .quotediv {
+   border-left: .25rem solid #c0c0c0;
+   padding-left: 1rem;
+   margin-left: 1rem;
+   margin-bottom: 3em;
+   margin-top: 3em;
+ }
+
+ .quotediv--yellow {
+   background-color: #FFFFE1;
+ }
